spec/data/invalid_players/player3.rb
class InvalidNoTakeTurnDefinedPlayer
  def name
  end
  
  def new_game(dictionary)
  end
end